# albion-online-monitoring-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  roadmap.md
src/: config.rs  main.rs  models.rs
src/artefacts/: artefacts.rs  mod.rs
src/items/: items.rs  mod.rs
src/person/: mod.rs  person.rs
