[package]
name = "albion-online-market-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.164", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.9"
awc = { version = "3.1.1"}
futures = "0.3.28"
surrealdb = "1.0.0-beta.9+20230402"
thiserror = "1.0.40"
auris = "0.1.3"